# TrueIDv2

./: .dockerignore  .env.example  .gitignore  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  REPO_INFO.md  SECURITY.md  deny.toml  docker-compose.tls.yml  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  seed-mac.sh  zap-baseline.conf
.github/workflows/: glibc-compat.yml  security-scan.yml  windows-agent-smoke.yml
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  commands.rs  main.rs
apps/engine/: Cargo.toml
apps/engine/src/: adapter_status.rs  admin_api.rs  alerts.rs  conflicts.rs  dns_resolver.rs  fingerprints.rs  firewall_push.rs  geo_resolver.rs  ldap_sync.rs  live_bus.rs  main.rs  metrics.rs  notifications.rs  report_generator.rs  report_scheduler.rs  retention.rs  scheduler.rs  siem_forwarder.rs  snmp_poller.rs  subnet_discovery.rs  subnets.rs  tls_listener.rs  tls_parsers.rs  vendor.rs  vpn_adapters.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: Cargo.toml
apps/web/assets/: index.html  login.html
apps/web/assets/css/: dashboard.css  generated-a.css  generated-b.css  login.css
apps/web/assets/js/: admin.js  alerts.js  analytics.js  api.js  app.js  conflicts.js  integrations.js  login.js  map.js  mappings.js  network.js  static-events.js  utils.js
apps/web/src/: auth.rs  cursor.rs  error.rs  helpers.rs  lib.rs  main.rs  middleware.rs  oidc.rs  password_policy.rs  rate_limit.rs  routes.rs  routes_alerts.rs  routes_analytics.rs  routes_api_keys.rs  routes_audit.rs  routes_auth.rs  routes_conflicts.rs  routes_dns.rs  routes_fingerprints.rs  routes_firewall.rs  routes_geo.rs  routes_import.rs  routes_ldap.rs  routes_map.rs  routes_notifications.rs  routes_oidc.rs  routes_proxy.rs  routes_report_schedules.rs  routes_retention.rs  routes_search.rs  routes_security.rs  routes_siem.rs  routes_sse.rs  routes_subnets.rs  routes_switches.rs  routes_tags.rs  routes_timeline.rs  routes_totp.rs  routes_users.rs  routes_v1.rs
apps/web/tests/: api_v2_tests.rs
crates/adapter-ad-logs/: Cargo.toml
crates/adapter-ad-logs/src/: lib.rs
crates/adapter-dhcp-logs/: Cargo.toml
crates/adapter-dhcp-logs/src/: lib.rs
crates/adapter-radius/: Cargo.toml
crates/adapter-radius/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  heartbeat.rs  lib.rs  main.rs  service.rs
crates/agent/src/collector/: ad_events.rs  dhcp_events.rs  evtlog.rs  mod.rs
crates/agent/src/tls/: config.rs  mod.rs
crates/agent/src/transport/: buffer.rs  mod.rs  syslog.rs  tls_sender.rs
crates/agent/tests/: parsers.rs
crates/agent/tests/fixtures/: dhcp_event_10.xml  event_4624.xml  event_4768.xml
crates/common/: Cargo.toml
crates/common/benches/: ingestion_throughput.rs
crates/common/migrations/: 0003_add_mac_to_mappings.sql  0004_add_is_active_to_mappings.sql  0005_add_vendor_to_mappings.sql  0006_add_config_table.sql  0007_add_agents_table.sql  0008_add_sync_status_table.sql  0009_add_auth_tables.sql  0010_add_search_indexes.sql  0011_add_conflicts_table.sql  0012_add_alerts_tables.sql  0013_add_subnets.sql  0014_add_dns_cache.sql  0015_add_snmp_tables.sql  0016_add_dhcp_fingerprints.sql  0017_fix_fingerprint_sort_order.sql  0018_add_ip_sessions.sql  0019_add_firewall_targets.sql  0020_add_siem_targets.sql  0021_add_ldap_groups.sql  0022_add_report_snapshots.sql  0023_add_notification_channels.sql  0024_add_retention_policies.sql  0025_add_security_enhancements.sql  0026_add_enrichment.sql  0027_add_report_schedules.sql  0028_add_api_rate_limits.sql  0029_add_oidc_config.sql
crates/common/src/: app_config.rs  auth_provider.rs  db.rs  db_analytics.rs  db_auth.rs  lib.rs  live_event.rs  model.rs  notification.rs  pagination.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_mappings.sql  0002_create_events.sql
crates/db/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/utils/: Cargo.toml
data/: trueid.db
deploy/caddy/: Caddyfile
deploy/nginx/: trueid.conf
deploy/systemd/: trueid-backup.service  trueid-backup.timer  trueid-engine.service  trueid-web.service
docs/: API_CONTRACT_REVIEW_CHECKLIST.md  DEPLOYMENT.md  HA.md  INTEGRATION_GUIDE.md  LAB_TEST_REPORT_2026-04-03.md  LAB_TEST_REPORT_2026-04-07.md  OPENAPI_CONTRACT_DRIFT.md  openapi.yaml
integrations/sycope/: Dockerfile  README.md  config.json  docker-compose.connector.yml  install.py  trueid_api.py  trueid_sync.py  uninstall.py
integrations/sycope/tests/: test_trueid_api.py  test_trueid_api_integration.py  test_trueid_sync.py
scripts/: backup.sh  capture-screenshots.py  check-csp-assets.py  check-zap-report.py  compose-e2e-validate.sh  docker-smoke-test.sh  gen-certs.sh  inject-demo-data.py  install.sh  lab-validate-trueid-sycope.sh  repo-e2e-validate.sh  restore.sh  security-pipeline.sh  smoke-test-e2e.sh  smoke-test.sh  test_check_zap_report.py
scripts/windows/: verify_trueid_agent.ps1
sycope/: api.py  config.py  exceptions.py  functions.py  logging.py
tests/: Cargo.toml  auth_integration.rs  rbac_matrix.rs
tests/support/: mod.rs
