[workspace]
members = [
  "crates/core",
  "crates/db",
  "crates/ingest",
  "crates/adapter-radius",
  "crates/adapter-ad-logs",
  "crates/utils",
  "apps/server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
radius = "0.4"
sqlx = { version = "0.7", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
