[package]
name = "trueid-cli"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "trueid"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tabled = "0.16"
