[package]
name = "trueid-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
net-identity-adapter-ad-logs = { path = "../../crates/adapter-ad-logs" }
net-identity-adapter-dhcp-logs = { path = "../../crates/adapter-dhcp-logs" }
net-identity-adapter-radius = { path = "../../crates/adapter-radius" }
trueid-common = { path = "../../crates/common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
csv = "1"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
snmp = "0.2"
ldap3 = "0.11"