[package]
name = "trueid-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
trueid-common = { path = "../../crates/common" }
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
