[package]
name = "trueid-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
cookie = "0.18"
dashmap = "5"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
trueid-common = { path = "../../crates/common" }
tokio = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
