[package]
name = "trueid-web"
version = "0.8.0"
edition = "2021"

[lib]
name = "trueid_web"
path = "src/lib.rs"

[[bin]]
name = "trueid-web"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
dashmap = "5"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
urlencoding = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
totp-rs = { version = "5", features = ["gen_secret", "qr"] }
trueid-common = { path = "../../crates/common" }
tokio = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
