[package]
name = "net-identity-adapter-dhcp-logs"
version = "0.8.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
trueid-common = { path = "../common" }
once_cell = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
